# colorize

./: .gitignore  Cargo.toml  README.md  benchmark.py  example.py  pyproject.toml  tox.ini
benchmark/: timer.py
python/colorize/: __init__.py  wrapper.py
src/: colorize.rs  lib.rs
src/colorize/: __init__.py  _colorize.py  colorize.py  colorize.pyi
tests/: test_colorize.py  test_operations.py
